# pe_to_shellcode

./: .appveyor.yml  .gitignore  CMakeLists.txt  LICENSE  README.md
hldr32/: hldr32.asm  hldr32.inc  install.bat  make.bat
hldr64/: LICENSE.md  hldr64.asm  hldr64.inc  install.bat
injector/: CMakeLists.txt  main.cpp
ldr2/: peb_lookup.h  peloader.cpp
loader_v1/: README.md
loader_v1/hldr32/: hldr32.asm  hldr32.inc  install.bat
loader_v1/hldr64/: hldr64.inc  install.bat  make.bat
loader_v2/: .gitignore  README.md  clean.bat  make_peloader32.bat  make_peloader64.bat  peb_lookup.h  peloader.cpp  peloader.h
pe2shc/: CMakeLists.txt  main.cpp  resource.h  resource.rc  resource1.rc  resource2.rc
pe_to_shellcode/: CMakeLists.txt  main.cpp  stub_license.md
runshc/: CMakeLists.txt  main.cpp
runshc_dll/: CMakeLists.txt  main.cpp  main.def
runshc_dll_runner/: CMakeLists.txt  main.cpp
test_shc/: CMakeLists.txt  LICENSE  main.cpp
tests/: CMakeLists.txt
tests/dcp_test/: CMakeLists.txt
tests/dpc_test/: CMakeLists.txt  main.cpp
tests/injector/: main.cpp  util.cpp  util.h
tests/test_case1/: CMakeLists.txt  main.cpp
tests/test_case2_dll/: CMakeLists.txt  main.cpp  main.def
